--- a/GW.ipynb
+++ b/GW.ipynb
@@ -75,8 +75,22 @@
         "# Data Preprocessing\n",
         "Data resource:\n",
         "*   [GWdatabase.h5](https://zenodo.org/record/201145#.YDNpnS0RonN)\n",
+        "\n",
+        "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eqCHgNI_6W7o"
+      },
+      "source": [
+        "# download data from web\n",
+        "!wget url_to_the_zip_file"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
