--- a/GW.ipynb
+++ b/GW.ipynb
@@ -807,28 +807,27 @@
     "        x = f['waveforms'][item]['t-tb(s)']\n",
     "        y = f['waveforms'][item]['strain*dist(cm)']\n",
     "        y = np.array(y)\n",
-    "        #window = signal.tukey(len(y),0.1)\n",
-    "        #y = y * window\n",
-    "        #b, a = signal.butter(10, 0.25, 'lowpass')\n",
-    "        #y = signal.filtfilt(b, a, y)\n",
-    "        #y = y - min(y)\n",
-    "        #y = y / max(y)\n",
+    "        x = np.array(x)\n",
+    "#         window = signal.tukey(len(y),0.1)\n",
+    "#         y = y * window\n",
+    "#         b, a = signal.butter(10, 0.25, 'lowpass')\n",
+    "#         y = signal.filtfilt(b, a, y)\n",
     "        #y = signal.resample(y, int(len(y)/16))\n",
     "        #num_resample = len(y)\n",
     "        #new_x = []\n",
     "        #for j in range(num_resample):\n",
     "            #new_x.append(x[j*16])\n",
     "        #for j in range(5):\n",
-    "            ###################aug_data = noise[0 + j*len(y) :(j+1)*len(y)]*300000000000000000\n",
-    "            ###################y = y + aug_data\n",
-    "        y = y - min(y)\n",
-    "        y = y / max(y)\n",
+    "            #tmp = np.random.choice(67108864-14986, 1)\n",
+    "            #aug_data = noise[tmp[0] :tmp[0] + len(y)]*1e20\n",
+    "            #y = y + aug_data\n",
     "        plt.figure(figsize=(4, 4), dpi=64)\n",
-    "        plt.plot(np.array(x),y)\n",
+    "        plt.plot(x,y/3.08567758e22*1e21)\n",
     "        plt.xlim(-0.01, 0.006)\n",
+    "        plt.ylim(-20, 20)\n",
     "        plt.axis('off')\n",
-    "        #title = \"./A/\" + str(index) + \"_\" + str(j) + \".jpeg\"\n",
-    "        title = \"./Final_EOS/\" + str(index) + \".jpeg\"\n",
+    "            #title = \"./Final_aug/\" + str(index) + \"_\" + str(j) + \".jpeg\"\n",
+    "        title = \"./Final_tbounce/\" + str(index) + \".jpeg\"\n",
     "        plt.savefig(title,dpi=64)\n",
     "    index += 1"
    ]
@@ -1435,13 +1434,7 @@
       "45/45 [==============================] - 5s 111ms/step - loss: 2.0843 - acc: 0.2783 - val_loss: 2.3353 - val_acc: 0.2068\n",
       "Epoch 61/100\n",
       "45/45 [==============================] - 5s 111ms/step - loss: 2.0645 - acc: 0.2721 - val_loss: 2.2780 - val_acc: 0.1926\n",
-      "Epoch 62/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 62/100\n",
       "45/45 [==============================] - 5s 112ms/step - loss: 2.0185 - acc: 0.2892 - val_loss: 2.2767 - val_acc: 0.1841\n",
       "Epoch 63/100\n",
       "45/45 [==============================] - 5s 111ms/step - loss: 1.9751 - acc: 0.2902 - val_loss: 2.2860 - val_acc: 0.1955\n",
@@ -1658,39 +1651,24 @@
    ],
    "source": [
     "#plot confusion matrix\n",
+    "answer_decode = answer_decode.astype('str')\n",
+    "y_test = np.array(y_test).astype('str')\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "cm = confusion_matrix(y_validation, answer_decode)\n",
+    "cm = confusion_matrix(y_test, answer_decode)\n",
     "import itertools\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def plot_confusion_matrix(cm, title='Confusion matrix', cmap=plt.cm.Oranges):\n",
-    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
-    "    plt.title(title)\n",
-    "    plt.colorbar()\n",
-    "    tick_marks = np.arange(cm.shape[1])\n",
-    "    plt.xticks(tick_marks, rotation=45)\n",
-    "    ax = plt.gca()\n",
-    "    ax.set_xticklabels((ax.get_xticks() +1).astype(str))\n",
-    "    plt.yticks(tick_marks)\n",
-    "\n",
-    "    thresh = cm.max() / 2.\n",
-    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
-    "        plt.text(j, i, format(cm[i, j], '.1f'),\n",
-    "                 horizontalalignment=\"center\",\n",
-    "                 color=\"white\" if cm[i, j] > thresh else \"black\")\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    plt.ylabel('True label')\n",
-    "    plt.xlabel('Predicted label')\n",
-    "\n",
-    "np.set_printoptions(precision=1) \n",
-    "print('Confusion matrix, without normalization')aot\n",
-    "print(cm)\n",
-    "fig, ax = plt.subplots()\n",
-    "plot_confusion_matrix(cm)\n",
-    "\n",
-    "plt.show()"
+    "import seaborn as sn\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "tmp = []\n",
+    "for i in range(20):\n",
+    "    tmp.append(0.5*i)\n",
+    "df_cm = pd.DataFrame(cm, index = [i for i in tmp],\n",
+    "                  columns = [i for i in tmp])\n",
+    "plt.figure(figsize = (10,7))\n",
+    "sn.heatmap(df_cm, annot=True)"
    ]
   },
   {
